test/Fail/Issue4481.err
Issue4481.agda:25.14-15: error: [WrongHidingInLHS]
Unexpected implicit argument
when checking that the expression λ {C = B} {A} → A has type
{A B : Set} → Set
